--- a/assignment 5/assignment 5.html
+++ b/assignment 5/assignment 5.html
@@ -6,7 +6,7 @@
 
 <center>
 
-<form action="welcome.php" method="post"><br><br>
+<form action="file.php" method="post"><br><br>
 
 Name: <input type="text" name="name"><br><br>
 
@@ -14,7 +14,7 @@ Age: <input type="text" name="Age"><br><br>
 
 <input type="submit"><br><br>
 
-<button onclick="document.location = 'welcome.php'">Retrieve Button</button>
+<button onclick="document.location = 'file.php'">Retrieve Button</button>
 
 </form>
 
